crates/canvas-cli/tests/snapshots/files_modules__files_human_snapshot_from_fixture_cache.snap
---
source: crates/canvas-cli/tests/files_modules.rs
expression: stdout
---
  ID    SOURCE     PATH      NAME       SIZE  
  50    listing    Slides    lec.pdf    10
