crates/canvas-cli/tests/snapshots/files_modules__modules_human_snapshot_without_items.snap
---
source: crates/canvas-cli/tests/files_modules.rs
expression: stdout
---
  ID    NAME      POS    STATE       ITEMS  
  8     Week 1    1      unlocked    1
